add cycle stats to api (#5)
* add cycle stats to api
