# app/controllers/cell_controller.py
@@ -147,6 +147,16 @@ def get_ts(test_name):
         result = [cell.to_dict() for cell in archive_cells]
         return jsonify(result)
 
+def get_stats(test_name):
+    if test_name == TEST_TYPE.CYCLE.value:
+        archive_cells = ArchiveOperator().get_all_cycle_stats()
+        result = [cell.to_dict() for cell in archive_cells]
+        return jsonify(result)
+    if test_name == TEST_TYPE.ABUSE.value:
+        return jsonify([])
+        # archive_cells = ArchiveOperator().get_all_abuse_ts()
+        # result = [cell.to_dict() for cell in archive_cells]
+        # return jsonify(result)
 
 def get_test_ts_with_id(cell_id, test_name):
     if test_name == TEST_TYPE.CYCLE.value:
@@ -158,6 +168,13 @@ def get_test_ts_with_id(cell_id, test_name):
         result = [cell.to_dict() for cell in archive_cells]
         return jsonify(result)
 
+def get_stats_with_id(cell_id, test_name):
+    if test_name == TEST_TYPE.CYCLE.value:
+        archive_cells = ArchiveOperator().get_all_cycle_stats_with_id(cell_id)
+        result = [cell.to_dict() for cell in archive_cells]
+        return jsonify(result)
+    if test_name == TEST_TYPE.ABUSE.value:
+        return jsonify([])
 
 def get_meta_with_id(cell_id, test_name):
     if test_name == TEST_TYPE.CYCLE.value:
